# weather-tool

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
outputs/: insights_IAD_2000-01-01_2023-12-31.md  insights_KORD_2022-01-01_2023-12-31.md  insights_csv_2022-03-01_2023-10-31.md  metadata_IAD_2000-01-01_2023-12-31.json  metadata_KORD_2022-01-01_2023-12-31.json  metadata_csv_2022-03-01_2023-10-31.json  quality_report_IAD_2000-01-01_2023-12-31.json  quality_report_KORD_2022-01-01_2023-12-31.json  quality_report_csv_2022-03-01_2023-10-31.json  raw_clean_IAD_2000-01-01_2023-12-31.parquet  raw_clean_KORD_2022-01-01_2023-12-31.parquet  raw_clean_csv_2022-03-01_2023-10-31.parquet  summary_IAD_2000-01-01_2023-12-31.csv  summary_KORD_2022-01-01_2023-12-31.csv  summary_csv_2022-03-01_2023-10-31.csv
tests/: conftest.py  test_bug_fixes.py  test_cache.py  test_cli_compare_parsing.py  test_compare_aggregation.py  test_compare_report.py  test_compare_scoring.py  test_death_day.py  test_econ_tower.py  test_exec_summary.py  test_extreme.py  test_freeze.py  test_hours_above.py  test_iem_url.py  test_interval.py  test_missing_pct.py  test_packet.py  test_rules.py  test_ui_backend.py  test_wetbulb.py  test_wind.py  test_year_coverage.py  test_yearly_summary.py
weather_tool/: __init__.py  cli.py  config.py  pipeline.py
weather_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
weather_tool/connectors/: cache.py  csv_connector.py  iem_connector.py
weather_tool/core/: aggregate.py  compare.py  compare_scores.py  (+8 more)
(+22 files in other folders)
