[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-tool"
version = "0.1.0"
description = "Weather Analysis Tool — deterministic historical weather time-series analysis"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=12.0",
    "requests>=2.28",
    "typer[all]>=0.9",
    "scipy>=1.10",
    "tabulate>=0.9",
]

[project.optional-dependencies]
llm = ["openai>=1.0"]
streamlit = ["streamlit>=1.28", "plotly>=5.0"]
ui = ["streamlit>=1.28", "plotly>=5.0"]
viz = ["matplotlib>=3.7"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
weather-tool = "weather_tool.cli:app"

[tool.setuptools.packages.find]
include = ["weather_tool*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
